[package]
name = "metronome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
panic = "abort"
lto = "fat"

[dependencies]
anyhow = "1.0.75"
cpal = "0.15.2"
eframe = "0.22.0"
egui = "0.22.0"
iced_aw = "0.6.0"
